# realsensej

./: .gitattributes  README.md  pom.xml
nativelib/: CMakeLists.txt
nativelib/src/: camera_test.cpp  com_unigent_realsensej_RealSenseJ.cpp
nativelib/src/include/: com_unigent_realsensej_RealSenseJ.h
src/main/java/com/unigent/realsensej/: RealSenseJ.java
src/main/java/com/unigent/realsensej/test/: ImageViewer.java  RealSenseJTester.java
